@@ -144,7 +144,6 @@
 -(void)setTeamRanks;
 -(NSArray*)getTeamRankingsStr:(int)selection;
 -(void)save;
--(void)advanceSeasonForAllExceptUser;
 -(NSArray*)getBowlPredictions;
 -(NSArray*)getHeismanLeaders;
 
